--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,69 +6,20 @@ import Layout from "../components/Layout.astro";
   <div class="container">
     <h2>I am...</h2>
     <ul>
-      <li>a web developer.</li>
-      <li>accessibility obsessed.</li>
-      <li>a gamer.</li>
-      <li>an extrovert.</li>
-      <li>a sister.</li>
-      <li>a baritone.</li>
-      <li>a consumer.</li>
-      <li>"funny".</li>
+      <li>a web developer</li>
+      <li>accessibility obsessed</li>
+      <li>a gamer</li>
+      <li>hungry</li>
       <li>your future coworker?</li>
-    </ul>
-
-    <h2>I love...</h2>
-    <ul>
-      <li>
-        <a
-          href="https://www.youtube.com/watch?v=sOiMD45QGLs"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          【Ado】ギラギラ
-        </a>
-      </li>
-      <li>
-        <a
-          href="https://www.ikea.com/us/en/p/blahaj-soft-toy-shark-90373590/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          BLÅHAJ
-        </a>
-      </li>
-      <li>
-        <a
-          href="https://www.instagram.com/futago_udon/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Futago Udon
-        </a>
-      </li>
-      <li>Krispy Kreme</li>
-      <li>watermelon</li>
-      <li>Yummy Dino Buddies</li>
-      <li>people who offer interviews</li>
-    </ul>
-
-    <h2>Lukewarm Takes</h2>
-    <ul class="line">
-      <li>Popeyes has the best fast food chicken sandwich</li>
-      <li>Cane's has the best tenders, bar none, and it isn't close</li>
-      <li>Chick-fil-A is only good for waffle fries and cobb salads</li>
-      <li>In n Out fries are terrible, even animal-style or well-done</li>
-      <li>Peanut butter sandwiches are better with honey than with jelly</li>
-      <li>Taco Bell might not be authentic, but it's got something special</li>
     </ul>
 
     <h2>Fun Facts</h2>
     <ul class="line">
-      <li>I've memorized the entire lyrics to over sixteen hours of songs</li>
-      <li>When choosing between two shows, I usually watch the worse one</li>
-      <li>I need glasses but don't have them because I can't choose a style</li>
-      <li>I usually sleep on my back and without a pillow under my head</li>
-      <li>I like milk tea, but rarely go because I don't think it's worth it</li>
+      <li>I've memorized the lyrics to over seventeen hours of songs</li>
+      <li>My "top 100" playlist has 136 songs on it</li>
+      <li>My favorite game is Celeste</li>
+      <li>I like peanut butter with honey better than jelly in a sandwich</li>
+      <li>I use light mode VSCode</li>
     </ul>
   </div>
 </Layout>
