--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
   <body>
     <main>
       <div class="title">
-        <img src="/nh.svg" width="160px" height="160px" />
-        <hr class="vertical" />
-        <h1>NEIA HU</h1>
+        <h1>Neia Hu</h1>
+        <img src="/nh.svg" alt="" width="160px" height="160px" />
       </div>
-      <h2>Front-End Developer.</h2>
+      <h2>web developer</h2>
       <HeaderLink href="/about">About Me</HeaderLink>
       <HeaderLink href="/projects">Projects</HeaderLink>
       <HeaderLink href="/resume">Resume</HeaderLink>
@@ -34,15 +33,21 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
         align-items: center;
         margin-top: 25vh;
       }
+      img {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        margin-bottom: 20px;
+        -webkit-mask: linear-gradient(#000, #0000);
+        mask: linear-gradient(#000, #0000);
+      }
       h1 {
         font-size: 5rem;
-        overflow-wrap: break-word;
-        width: 2ch;
-        text-align: justify;
         margin: 0;
-        line-height: 54px;
         color: crimson;
-        font-family: monospace;
+        line-height: 64px;
       }
       hr.vertical {
         border: none;
@@ -53,11 +58,17 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
       }
       div.title {
         display: flex;
+        flex-direction: column;
         gap: 4px;
+        position: relative;
       }
       h2 {
         margin: 0;
         line-height: 2;
+      }
+      a {
+        color: crimson;
+        text-decoration: dotted underline;
       }
     </style>
   </body>
